syntax = "proto3";
option java_multiple_files = true;
package org.bank.service;

message CheckBalanceRequest {
  string accountId = 1;
}

message CheckBalanceResponse {
  double balance = 1;
}

service BalanceService {
  rpc checkBalance(CheckBalanceRequest) returns(CheckBalanceResponse);
}
